--- a/src/management/users/users-list.html
+++ b/src/management/users/users-list.html
@@ -22,7 +22,7 @@
     <div class="col-md-12">
         <div class="alert alert-info" ng-show="ulc.query.length < ulc.minQueryLength" role="alert">
             <p>Schrijf een zoekopdracht van minstens 3 karakters in het veld hierboven om gebruikers te zoeken.</p>
-            <p>Laat het veld leeg om de volledige lijst te tonen in de volgorde dat de gebruikers zijn aangemaakt.</p>
+            <p>Laat het veld leeg om alle gebruikers op te vragen in de volgorde dat ze zijn aangemaakt.</p>
         </div>
         <div ng-show="ulc.query.length >= ulc.minQueryLength && ulc.searchResult.totalItems === 0"
              class="alert alert-warning" role="alert">
