--- a/src/management/roles/role-form.html
+++ b/src/management/roles/role-form.html
@@ -10,12 +10,12 @@
 <form name="editor.form" class="css-form" novalidate>
     <div class="row">
         <div class="col-md-6">
-            <div class="form-group" udb-form-group ng-if="!editor.editName && editor.role.name && editor.role['@id']">
+            <div class="form-group" udb-form-group ng-if="!editor.editName && editor.role.name && editor.role['uuid']">
               <label class="control-label">Naam</label>
               <p><span ng-bind="editor.role.name"></span>
               <a href ng-click="editor.editName = true">Wijzigen</a></p>
             </div>
-            <div class="form-group" udb-form-group ng-if="editor.editName || !editor.role['@id']">
+            <div class="form-group" udb-form-group ng-if="editor.editName || !editor.role['uuid']">
                 <label class="control-label" for="label-name-field">Naam</label>
                 <input id="label-name-field"
                        class="form-control"
@@ -32,7 +32,7 @@
 
             </div>
             <button ng-disabled="!editor.form.$valid || editor.saving"
-              ng-if="!editor.role['@id']"
+              ng-if="!editor.role['uuid']"
               type="button"
               class="btn btn-primary"
               ng-click="editor.createRole()">
@@ -48,7 +48,7 @@
             </button>
         </div>
     </div>
-    <div class="row" ng-show="editor.role['@id']">
+    <div class="row" ng-show="editor.role['uuid']">
         <div class="col-md-12">
             <div class="form-group" udb-form-group ng-if="!editor.editConstraint">
               <label class="control-label">Bewerkrecht</label>
@@ -74,7 +74,7 @@
             </button>
         </div>
     </div>
-    <div class="row" ng-show="editor.role['@id']">
+    <div class="row" ng-show="editor.role['uuid']">
       <div class="col-md-12">
         <uib-tabset class="role-form-tabset">
           <uib-tab heading="Permissies">
