--- a/src/management/labels/label-editor.html
+++ b/src/management/labels/label-editor.html
@@ -14,8 +14,10 @@
                 <div class="form-group" udb-form-group>
                     <label for="label-name-field">Naam</label>
                     <input id="label-name-field"
+                           class="form-control"
                            type="text"
                            name="name"
+                           udb-semicolon-label-check
                            ng-model="editor.label.name"
                            ng-minlength="3"
                            ng-required="true"
@@ -24,6 +26,7 @@
                     <p class="help-block" ng-if="editor.form.name.$error.required">Een label naam is verplicht.</p>
                     <p class="help-block" ng-if="editor.form.name.$error.minlength">Een label moet uit minstens 3 tekens bestaan.</p>
                     <p class="help-block" ng-if="editor.form.name.$error.maxlength">Een label mag maximum 255 tekens bevatten.</p>
+                    <p class="help-block" ng-if="editor.form.name.$error.semicolonLabel">Een label naam mag geen puntkomma bevatten.</p>
                 </div>
             </div>
         </div>
