III-963 fix bug in template when booking url is changed

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -466,7 +466,7 @@
                               <div class="reservatie-website-info reservatie-info"
                                    ng-show="info.type === 'url' && info.booking">
 
-                                <div class="reservatie-info-stap2" ng-hide="editBookingUrl">
+                                <div class="reservatie-info-stap2">
                                   <div class="weergave">
                                       <p><strong>Hoe mag deze link verschijnen?</strong></p>
                                       <select ng-model="bookingModel.urlLabel"
