--- a/src/entry/labelling/offer-label-modal.html
+++ b/src/entry/labelling/offer-label-modal.html
@@ -1,14 +1,19 @@
-<div class="modal-body">
+<div class="modal-body offer-label-modal">
 
-  <label>Labels</label>
+  <h2>Labels</h2>
 
   <div class="row">
     <div class="col-lg-12">
-      <input type="text" ng-model="labelNames" class="form-control"/>
+      <input type="text"
+             class="form-control"
+             ng-model="lmc.labelNames"
+             name="labels" />
+      <p class="help-block">Een puntkomma start een nieuw label. <br />
+        <span class="lmc-alert text-danger" ng-if="lmc.alert" ng-bind="lmc.alert"><</span></p>
     </div>
 
     <div class="col-lg-12">
-      <div class="checkbox" ng-repeat="label in labelSelection">
+      <div class="checkbox" ng-repeat="label in lmc.labelSelection">
         <label>
           <input type="checkbox" ng-model="label.selected"/>
           <span ng-bind="label.name"></span>
@@ -19,6 +24,6 @@
 </div>
 
 <div class="modal-footer">
-  <button class="btn btn-default" ng-click="close()">Annuleren</button>
-  <button class="btn btn-primary" ng-click="ok()">Label</button>
+  <button class="btn btn-default" ng-click="lmc.close()">Annuleren</button>
+  <button class="btn btn-primary" ng-click="lmc.ok()">Label</button>
 </div>
