--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -293,21 +293,23 @@
 
                 <div class="row extra-tickets-periode">
                     <div class="extra-task">
-                        <div class="col-sm-8 col-sm-offset-3" ng-hide="eventFormData.bookingInfo.availabilityStarts">
+                        <div class="col-sm-12" ng-hide="eventFormData.bookingInfo.availabilityStarts">
                             <a class="btn btn-primary reservatie-periode-toevoegen" href="#" ng-click="openBookingPeriodModal()">
                                 Reservatieperiode toevoegen
                             </a>
                         </div>
-                        <div class="col-sm-8 col-sm-offset-3" ng-show="eventFormData.bookingInfo.availabilityStarts">
-                            <span>
-                              <span>Van </span>
-                              <span ng-bind="eventFormData.bookingInfo.availabilityStarts | date:'dd-MM-yyyy'"></span>
-                              <span> tot </span>
-                              <span ng-bind="eventFormData.bookingInfo.availabilityEnds | date:'dd-MM-yyyy'"></span>
-                              <a class="btn btn-primary reservatie-periode-toevoegen" href="#" ng-click="openBookingPeriodModal()">
-                                  Reservatieperiode wijzigen
-                              </a>
-                            </span>
+                        <div class="col-sm-12" ng-show="eventFormData.bookingInfo.availabilityStarts">
+                            <div class="booking-period">
+                                <span>
+                                  <span>Van </span>
+                                  <span ng-bind="eventFormData.bookingInfo.availabilityStarts | date:'dd-MM-yyyy'"></span>
+                                  <span> tot </span>
+                                  <span ng-bind="eventFormData.bookingInfo.availabilityEnds | date:'dd-MM-yyyy'"></span>
+                                  <a class="btn btn-primary reservatie-periode-toevoegen" href="#" ng-click="openBookingPeriodModal()">
+                                      Reservatieperiode wijzigen
+                                  </a>
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
