--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -291,7 +291,10 @@
                 </form>
               </section>
 
-              <div class="row extra-tickets-periode">
+              <div class="row extra-tickets-periode"
+                   ng-show="bookingModel.url ||
+                   bookingModel.phone ||
+                   bookingModel.email">
                   <div class="extra-task">
                       <udb-reservation-period></udb-reservation-period>
                   </div>
