--- a/src/event_form/steps/event-form-step2.html
+++ b/src/event_form/steps/event-form-step2.html
@@ -15,7 +15,10 @@
           <div class="wanneerkiezer" ng-show="eventFormData.activeCalendarType === ''">
             <ul class="list-inline button-list">
               <li ng-repeat="calendarLabel in ::calendarLabels" ng-hide="eventFormData.isPlace && calendarLabel.eventOnly">
-                <button class="btn btn-default" ng-bind="::calendarLabel.label" ng-click="setCalendarType(calendarLabel.id)"></button>
+                <button
+                        class="btn btn-default"
+                        ng-bind="::calendarLabel.label"
+                        ng-click="setCalendarType(calendarLabel.id); scrollToBottom('wanneer');"></button>
               </li>
             </ul>
           </div>
