III-1373 use .title on /manage/roles/

--- a/src/management/roles/role-form.html
+++ b/src/management/roles/role-form.html
@@ -1,7 +1,4 @@
-<div class="page-header">
-    <h1>Roles</h1>
-</div>
-<h2>Role bewerken</h2>
+<h1 class="title">Role bewerken</h1>
 
 <div ng-show="!editor.loadedRole && !editor.loadingError">
     <i class="fa fa-circle-o-notch fa-spin"></i>
