--- a/src/management/roles/roles-list.html
+++ b/src/management/roles/roles-list.html
@@ -1,6 +1,4 @@
-<div class="page-header">
-    <h1>Rollen <small><a ui-sref="split.manageRoles.create" ui-sref-opts="{reload:true}">toevoegen</a></small></h1>
-</div>
+<h1 class="title">Rollen <small><a ui-sref="split.manageRoles.create" ui-sref-opts="{reload:true}">toevoegen</a></small></h1>
 
 <div class="row">
     <div class="col-md-9">
