--- a/src/management/labels/label-creator.html
+++ b/src/management/labels/label-creator.html
@@ -1,7 +1,4 @@
-<div class="page-header">
-    <h1>Labels</h1>
-</div>
-<h2>Label Toevoegen</h2>
+<h1 class="title">Label toevoegen</h1>
 
 <form name="creator.form" class="css-form" novalidate>
     <div class="row">
