--- a/src/management/labels/label-editor.html
+++ b/src/management/labels/label-editor.html
@@ -1,7 +1,4 @@
-<div class="page-header">
-    <h1>Labels</h1>
-</div>
-<h2>Label bewerken</h2>
+<h1 class="title">Label bewerken</h1>
 
 <div ng-show="!editor.label && !editor.loadingError">
     <i class="fa fa-circle-o-notch fa-spin"></i>
