--- a/src/management/labels/labels-list.html
+++ b/src/management/labels/labels-list.html
@@ -1,6 +1,4 @@
-<div class="page-header">
-    <h1>Labels <small><a ui-sref="split.manageLabels.create">toevoegen</a></small></h1>
-</div>
+<h1 class="title">Labels <small><a ui-sref="split.manageLabels.create">toevoegen</a></small></h1>
 
 <div class="row">
     <div class="col-md-11">
