III-1373 use .title on /manage/users

--- a/src/management/users/users-list.html
+++ b/src/management/users/users-list.html
@@ -1,6 +1,4 @@
-<div class="page-header">
-    <h1>Gebruikers</h1>
-</div>
+<h1 class="title">Gebruikers</h1>
 
 <div class="row">
     <div class="col-md-11">
