--- a/src/management/users/user-editor.html
+++ b/src/management/users/user-editor.html
@@ -1,7 +1,4 @@
-<div class="page-header">
-    <h1>Gebruikers</h1>
-</div>
-<h2>Gebruiker bewerken</h2>
+<h1 class="title">Gebruiker bewerken</h1>
 
 <div ng-show="!editor.user && !editor.loadingError">
     <i class="fa fa-circle-o-notch fa-spin"></i>
