III-963 remove cryptical class names from less file

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -201,7 +201,7 @@
               </section>
 
               <section class="state filling complete">
-                <form name="contactInfoForm">
+                <form name="contactInfoForm" class="contact-info">
                   <table class="table">
                     <tr ng-repeat="(key, info) in contactInfo"
                         ng-model="info"
