--- a/src/management/moderation/moderation-list.html
+++ b/src/management/moderation/moderation-list.html
@@ -2,13 +2,20 @@
     <h1>Valideren</h1>
 </div>
 
+<div ng-show="moderator.loading && !moderator.loadingError">
+    <i class="fa fa-circle-o-notch fa-spin"></i>
+</div>
+
 <div class="row">
     <div class="col-md-12">
         <div class="form-inline">
             <div class="form-group">
                 <label>Valideer als</label>
-                <select class="form-control">
-                    <option>blub </option>
+                <select class="form-control"
+                        name="role"
+                        ng-change="moderator.showModerationContent"
+                        ng-model="moderator.selectedRole">
+                        <option ng-repeat="role in moderator.roles" ng-value="role">{{role.name}}</option>
                 </select>
             </div>
         </div>
