--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -233,44 +233,44 @@
                                ng-model-options="{ updateOn: 'blur' }"/>
                         <span class="help-block" ng-hide="infoErrorMessage === ''" ng-bind="infoErrorMessage"></span>
 
-                          <div class="checkbox">
-                              <label ng-show="info.type === 'url' && showBookingOption(info)">
-                                  <input type="checkbox"
-                                         class="reservatie-website-check reservatie-check"
-                                         ng-model="info.booking"
-                                         ng-click="toggleBookingType(info)">
-                                  Gebruik voor reservatie
-                              </label>
-                              <div class="reservatie-website-info reservatie-info"
-                                   ng-show="info.type === 'url' && info.booking">
+                          <div class="booking-options"
+                               ng-show="showBookingOption(info)">
+                              <div class="checkbox"
+                                   ng-switch-when="url">
+                                  <label>
+                                      <input type="checkbox"
+                                             class="reservatie-website-check reservatie-check"
+                                             ng-model="info.booking"
+                                             ng-click="toggleBookingType(info)">
+                                      Gebruik voor reservatie
+                                  </label>
+                                  <div class="reservatie-website-info reservatie-info"
+                                       ng-show="info.booking">
 
-                                <div class="reservatie-info-stap2">
-                                  <div class="weergave">
-                                      <p><strong>Hoe mag deze link verschijnen?</strong></p>
-                                      <select ng-model="bookingModel.urlLabel"
-                                              ng-change="saveWebsitePreview()">
-                                          <option value="Koop tickets">Koop tickets</option>
-                                          <option value="Reserveer plaatsen">Reserveer plaatsen</option>
-                                          <option value="Controleer beschikbaarheid">Controleer beschikbaarheid</option>
-                                          <option value="Schrijf je in">Schrijf je in</option>
-                                      </select>
+                                    <div class="reservatie-info-stap2">
+                                      <div class="weergave">
+                                          <p><strong>Hoe mag deze link verschijnen?</strong></p>
+                                          <select ng-model="bookingModel.urlLabel"
+                                                  ng-change="saveWebsitePreview()">
+                                              <option value="Koop tickets">Koop tickets</option>
+                                              <option value="Reserveer plaatsen">Reserveer plaatsen</option>
+                                              <option value="Controleer beschikbaarheid">Controleer beschikbaarheid</option>
+                                              <option value="Schrijf je in">Schrijf je in</option>
+                                          </select>
+                                      </div>
+                                    </div>
                                   </div>
-                                </div>
                               </div>
-                              <label ng-show="info.type === 'phone' && showBookingOption(info)">
-                                  <input type="checkbox"
-                                         class="reservatie-telefoon-check reservatie-check"
-                                         ng-model="info.booking"
-                                         ng-change="toggleBookingType(info)">
-                                  Gebruik voor reservatie
-                              </label>
-                              <label ng-show="info.type === 'email' && showBookingOption(info)">
-                                  <input type="checkbox"
-                                         class="reservatie-email-check reservatie-check"
-                                         ng-model="info.booking"
-                                         ng-change="toggleBookingType(info)">
-                                  Gebruik voor reservatie
-                              </label>
+                              <div class="checkbox"
+                                   ng-switch-default>
+                                  <label>
+                                      <input type="checkbox"
+                                             class="reservatie-telefoon-check reservatie-check"
+                                             ng-model="info.booking"
+                                             ng-change="toggleBookingType(info)">
+                                      Gebruik voor reservatie
+                                  </label>
+                              </div>
                           </div>
                       </td>
                       <td>
