--- a/src/management/moderation/moderation-list.html
+++ b/src/management/moderation/moderation-list.html
@@ -13,7 +13,7 @@
                 <label>Valideer als</label>
                 <select class="form-control"
                         name="role"
-                        ng-change="moderator.showModerationContent(moderator.selectedRole)"
+                        ng-change="moderator.findModerationContent(moderator.selectedRole)"
                         ng-model="moderator.selectedRole">
                         <option ng-repeat="role in moderator.roles" ng-value="role.uuid">{{role.name}}</option>
                 </select>
