--- a/src/management/moderation/moderation-list.html
+++ b/src/management/moderation/moderation-list.html
@@ -14,8 +14,8 @@
                 <select class="form-control"
                         name="role"
                         ng-change="moderator.findModerationContent(moderator.selectedRole)"
-                        ng-model="moderator.selectedRole">
-                        <option ng-repeat="role in moderator.roles" ng-value="role.uuid">{{role.name}}</option>
+                        ng-model="moderator.selectedRole"
+                        ng-options="role.name for role in moderator.roles track by role.uuid">
                 </select>
             </div>
         </div>
