III-1331 make description-field bigger

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -45,8 +45,7 @@
               </section>
               <section class="state filling">
                 <div class="form-group">
-                  <label>Beschrijving</label>
-                  <textarea class="form-control" ng-model="description"></textarea>
+                  <textarea class="form-control" ng-model="description" rows="6"></textarea>
                   <div class="tip" ng-switch="eventFormData.eventType">
                     <p ng-switch-when="0.17.0.0.0">
                       Geef hier een wervende omschrijving van de route. Vermeld in deze tekst <strong>hoe</strong>
