--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -26,6 +26,20 @@
         </p>
       </div>
     </div>
+
+    <div class="alert alert-warning" ng-show="infoMissing">
+      <strong>Vul alle info in vooraleer je kan opslaan:</strong>
+      <ul>
+        <li ng-repeat="error in missingInfo" ng-bind-html="error">
+          {{error}}
+        </li>
+      </ul>
+    </div>
+
+    <div class="alert alert-danger" ng-show="error">
+      Er ging iets fout tijdens het opslaan van je activiteit. Gelieve later opnieuw te proberen.
+    </div>
+
     <p ng-show="eventFormData.id === ''">
       <a class="btn btn-primary titel-doorgaan"
           ng-click="validateEvent(true)"
@@ -76,13 +90,6 @@
       </li>
     </ul>
 
-    <div class="alert alert-warning" ng-show="infoMissing">
-      Gelieve alle info in te vullen vooraleer je kan opslaan.
-    </div>
-
-    <div class="alert alert-danger" ng-show="error">
-      Er ging iets fout tijdens het opslaan van je activiteit. Gelieve later opnieuw te proberen.
-    </div>
   </section>
 
 </div>
