--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -33,7 +33,7 @@
               <section class="state incomplete">
                 <div class="row">
                   <div class="col-sm-6">
-                    <a class="btn btn-default to-filling" ng-click="descriptionCssClass = 'state-filling'">
+                    <a class="btn btn-default to-filling" ng-click="alterDescription()">
                       Tekst toevoegen
                     </a>
                   </div>
@@ -41,11 +41,11 @@
               </section>
               <section class="state complete">
                 <div ng-bind-html="eventFormData.description.nl"></div>
-                <a class="btn btn-link" ng-click="descriptionCssClass = 'state-filling'">Wijzigen</a>
+                <a class="btn btn-link" ng-click="alterDescription()">Wijzigen</a>
               </section>
               <section class="state filling">
                 <div class="form-group">
-                  <textarea class="form-control" ng-model="description" rows="6"></textarea>
+                  <textarea class="form-control" ng-model="description" rows="6" focus-if="focusDescription"></textarea>
                   <div class="tip" ng-switch="eventFormData.eventType">
                     <p ng-switch-when="0.17.0.0.0">
                       Geef hier een wervende omschrijving van de route. Vermeld in deze tekst <strong>hoe</strong>
