--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="alert alert-warning" ng-show="infoMissing">
-      <strong>Vul alle info in vooraleer je kan opslaan:</strong>
+      <strong>Je vulde niet alle verplichte informatie in:</strong>
       <ul>
         <li ng-repeat="error in missingInfo" ng-bind-html="error">
           {{error}}
