--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -10,8 +10,8 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <label for="gemeente-autocomplete" id="gemeente-label" ng-hide="selectedCity !== ''">Kies een gemeente</label>
-        <div id="gemeente-kiezer" ng-hide="selectedCity !== ''">
+        <label for="gemeente-autocomplete" id="gemeente-label" ng-hide="selectedCity">Kies een gemeente</label>
+        <div id="gemeente-kiezer" ng-hide="selectedCity">
           <span style="position: relative; display: inline-block; direction: ltr;" class="twitter-typeahead">
             <input type="text"
                    id="gemeente-autocomplete"
@@ -27,14 +27,14 @@
             Er was een probleem tijdens het ophalen van de steden
           </div>
         </div>
-        <div id="gemeente-gekozen" ng-show="selectedCity !== ''">
+        <div id="gemeente-gekozen" ng-show="selectedCity">
           <span class="btn-chosen" id="gemeente-gekozen-button" ng-bind="selectedCity"></span>
           <a href="" class="btn btn-default btn-link" ng-click="changeCitySelection()">Wijzigen</a>
         </div>
       </div>
     </div>
 
-    <div id="waar-evenement" class="clearfix" ng-show="eventFormData.isEvent && selectedCity !== ''">
+    <div id="waar-evenement" class="clearfix" ng-show="eventFormData.isEvent && selectedCity">
       <div class="row">
         <div class="col-xs-12">
           <label id="locatie-label" ng-show="!selectedLocation">
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <div id="waar-plaats" class="clearfix" ng-show="eventFormData.isPlace && selectedCity !== ''">
+    <div id="waar-plaats" class="clearfix" ng-show="eventFormData.isPlace && selectedCity">
       <div class="plaats-adres-ingeven" ng-hide="placeStreetAddress">
         <div class="row">
           <div class="col-xs-12">
@@ -92,7 +92,7 @@
               <input class="form-control"
                      id="straat"
                      name="street"
-                     ng-model="newStreetAddress"
+                     ng-model="newPlaceStreetAddress"
                      placeholder="Kerkstraat 1"
                      type="text"
                      required />
@@ -102,13 +102,13 @@
             </div>
           </div>
         </div>
-        <a class="btn btn-primary plaats-ok" ng-click="setStreetAddress(newStreetAddress)">OK</a>
+        <a class="btn btn-primary plaats-ok" ng-click="setPlaceStreetAddress(newPlaceStreetAddress)">OK</a>
       </div>
 
       <div class="plaats-adres-resultaat" ng-show="placeStreetAddress">
         <span>
-          <span class="btn-chosen" ng-bind="eventFormData.location.address.streetAddress"></span>
-          <a class="btn btn-link plaats-adres-wijzigen" ng-click="changeStreetAddress()">Wijzigen</a>
+          <span class="btn-chosen" ng-bind="eventFormData.address.streetAddress"></span>
+          <a class="btn btn-link plaats-adres-wijzigen" ng-click="changePlaceStreetAddress()">Wijzigen</a>
         </span>
       </div>
     </div>
