III-1329 move error strings to translation service

--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -30,7 +30,7 @@
     <div class="alert alert-warning" ng-show="infoMissing">
       <strong>Je vulde niet alle verplichte informatie in:</strong>
       <ul>
-        <li ng-repeat="error in missingInfo" ng-bind-html="error">
+        <li ng-repeat="error in missingInfo" ng-bind-html="error" translate>
           {{error}}
         </li>
       </ul>
