--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -18,7 +18,7 @@
                    class="form-control uib-typeahead"
                    placeholder="Gemeente of postcode"
                    ng-model="cityAutocompleteTextField"
-                   ng-focus="scrollToBottom('waar')"
+                   focus-if="eventFormData.showStep3"
                    uib-typeahead="city as city.zip + ' ' + city.name for city in cities | filter:filterCities($viewValue) | orderBy:orderByLevenshteinDistance($viewValue)"
                    typeahead-on-select="selectCity($item, $label)"
                    typeahead-min-length="2"
@@ -48,7 +48,6 @@
                      placeholder="Locatie"
                      class="form-control typeahead"
                      ng-model="locationAutocompleteTextField"
-                     ng-focus="scrollToBottom('waar')"
                      uib-typeahead="location.id as location.name for location in filteredLocations = (locationsForCity | filter:filterCityLocations($viewValue)) | orderBy:orderCityLocations($viewValue) | limitTo:50"
                      typeahead-on-select="selectLocation($item, $model, $label)"
                      typeahead-min-length="3"
