III-1447: style publish button

--- a/src/event_form/steps/event-form.html
+++ b/src/event_form/steps/event-form.html
@@ -5,5 +5,9 @@
   <udb-event-form-step4></udb-event-form-step4>
   <udb-event-form-step5></udb-event-form-step5>
 
+  <div class="event-validation">
+    <p>Automatisch bewaard om 13:25 uur.</p>
+    <button type="submit" class="btn btn-success">Publiceren</button>
+  </div>
   <udb-event-form-save-time-tracker></udb-event-form-save-time-tracker>
 </div>
