III-1447: don't show the last saved date for now

--- a/src/event_form/steps/event-form-publish.html
+++ b/src/event_form/steps/event-form-publish.html
@@ -1,4 +1,4 @@
 <div class="event-validation">
-    <p>Automatisch bewaard om 13:25 uur.</p>
+    <p ng-hide="true">Automatisch bewaard om 13:25 uur.</p>
     <button type="submit" class="btn btn-success" ng-click="efpc.publish()">Publiceren</button>
 </div>
