III-934: Replace focus-if attributes with auto-scroll
Switched to focusin event and added spec.

--- a/src/event_form/steps/event-form-step2.html
+++ b/src/event_form/steps/event-form-step2.html
@@ -18,7 +18,8 @@
                 <button
                         class="btn btn-default"
                         ng-bind="::calendarLabel.label"
-                        ng-click="setCalendarType(calendarLabel.id); scrollToBottom('wanneer');"></button>
+                        udb-auto-scroll
+                        ng-click="setCalendarType(calendarLabel.id);"></button>
               </li>
             </ul>
           </div>
